[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xontrib-prompt-bar"
version = "0.5.8"
description = "The bar theme for xonsh shell."
readme = "README.md"
license = { text = "BSD" }
authors = [{ name = "anki", email = "author@example.com" }]
requires-python = ">=3.6"
keywords = ["xonsh", "shell", "theme", "prompt"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Unix Shell",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: BSD License"
]
dependencies = ["xonsh"]


[project.urls]
"Homepage" = "https://github.com/anki-code/xontrib-prompt-bar"
"Documentation" = "https://github.com/anki-code/xontrib-prompt-bar/blob/master/README.md"
"Code" = "https://github.com/anki-code/xontrib-prompt-bar"
"Issue tracker" = "https://github.com/anki-code/xontrib-prompt-bar/issues"

[tool.setuptools]
package-dir = {"xontrib" = "xontrib"}
